# rust-prisma-template

./: .gitignore  Cargo.toml  README.md
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: main.rs
