[package]
name = "prisma-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.3", default-features = false, features = ["postgresql", "migrations"] }
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread"] }
serde = "1.0.149"

[workspace]

members = [
  "prisma-cli"
]
